gen/org/passren/dynamodb/sql/DynamoSqlParser.java
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DynamoSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, COMMENT_INPUT=2, LINE_COMMENT=3, ALTER=4, AND=5, AS=6, ASC=7, 
		BETWEEN=8, BY=9, COLUMN=10, CONDITION=11, CONSTRAINT=12, CONTINUE=13, 
		CREATE=14, CURSOR=15, DATABASE=16, DATABASES=17, DEFAULT=18, DELETE=19, 
		DESC=20, DESCRIBE=21, DISTINCT=22, DISTINCTROW=23, DROP=24, EXISTS=25, 
		FROM=26, IN=27, INDEX=28, INSERT=29, INTO=30, IS=31, LIKE=32, LIMIT=33, 
		NOT=34, NULL_LITERAL=35, NUMBER=36, ON=37, OR=38, ORDER=39, PARTITION=40, 
		PRIMARY=41, PURGE=42, SELECT=43, SET=44, REMOVE=45, RETURNING=46, SEPARATOR=47, 
		SHOW=48, STATEMENT=49, TABLE=50, UNION=51, UPDATE=52, VALUES=53, VALUE=54, 
		WHERE=55, TRUE=56, FALSE=57, MISSING=58, INT=59, INTEGER=60, BIGINT=61, 
		REAL=62, DOUBLE=63, FLOAT=64, DECIMAL=65, NUMERIC=66, DATE=67, TIME=68, 
		TIMESTAMP=69, DATETIME=70, YEAR=71, CHAR=72, VARCHAR=73, BEGIN=74, CONTAINS=75, 
		COMPRESSION=76, QUARTER=77, MONTH=78, DAY=79, HOUR=80, MINUTE=81, WEEK=82, 
		SECOND=83, MICROSECOND=84, STAR=85, DIVIDE=86, MODULE=87, PLUS=88, MINUS=89, 
		DIV=90, MOD=91, EQUAL_SYMBOL=92, GREATER_SYMBOL=93, LESS_SYMBOL=94, EXCLAMATION_SYMBOL=95, 
		BIT_NOT_OP=96, BIT_OR_OP=97, BIT_AND_OP=98, BIT_XOR_OP=99, BRACKET_LEFT=100, 
		BRACKET_RIGHT=101, DOT=102, LR_BRACKET=103, RR_BRACKET=104, LR_BRACE=105, 
		RR_BRACE=106, COMMA=107, SEMI=108, AT_SIGN=109, ZERO_DECIMAL=110, ONE_DECIMAL=111, 
		TWO_DECIMAL=112, SINGLE_QUOTE_SYMB=113, DOUBLE_QUOTE_SYMB=114, REVERSE_QUOTE_SYMB=115, 
		COLON_SYMB=116, QUESTION_MARK_SYMB=117, ANGLE_DOUBLE_LEFT=118, ANGLE_DOUBLE_RIGHT=119, 
		RETURNING_ALL_OLD=120, RETURNING_MODIFIED_OLD=121, RETURNING_ALL_NEW=122, 
		RETURNING_MODIFIED_NEW=123, RETURN_VALUES=124, STRING_LITERAL=125, DECIMAL_LITERAL=126, 
		REAL_LITERAL=127, BIT_STRING=128, ID=129, SINGLE_QUOTE_ID=130, DOUBLE_QUOTE_ID=131, 
		ERROR_RECONGNIGION=132;
	public static final int
		RULE_root = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_emptyStatement_ = 3, 
		RULE_dmlStatement = 4, RULE_selectStatement = 5, RULE_selectElements = 6, 
		RULE_selectElement = 7, RULE_fromClause = 8, RULE_expression = 9, RULE_predicate = 10, 
		RULE_expressionAtom = 11, RULE_insertStatement = 12, RULE_insertStatementValues = 13, 
		RULE_insertValuePair = 14, RULE_updateStatement = 15, RULE_deleteStatement = 16, 
		RULE_singleDeleteStatement = 17, RULE_singleUpdateStatement = 18, RULE_updateStatementElement = 19, 
		RULE_updatedElement = 20, RULE_removeElement = 21, RULE_fullColumnName = 22, 
		RULE_constant = 23, RULE_valueConstant = 24, RULE_decimalLiteral = 25, 
		RULE_booleanLiteral = 26, RULE_stringLiteral = 27, RULE_listLiteral = 28, 
		RULE_mapLiteral = 29, RULE_valuePair = 30, RULE_numberSetLiteral = 31, 
		RULE_stringSetLiteral = 32, RULE_nullNotnull = 33, RULE_comparisonOperator = 34, 
		RULE_logicalOperator = 35, RULE_limitClause = 36, RULE_limitClauseAtom = 37, 
		RULE_fullId = 38, RULE_tableName = 39, RULE_uid = 40, RULE_dotted_id = 41, 
		RULE_fullColumnNameList = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "sqlStatements", "sqlStatement", "emptyStatement_", "dmlStatement", 
			"selectStatement", "selectElements", "selectElement", "fromClause", "expression", 
			"predicate", "expressionAtom", "insertStatement", "insertStatementValues", 
			"insertValuePair", "updateStatement", "deleteStatement", "singleDeleteStatement", 
			"singleUpdateStatement", "updateStatementElement", "updatedElement", 
			"removeElement", "fullColumnName", "constant", "valueConstant", "decimalLiteral", 
			"booleanLiteral", "stringLiteral", "listLiteral", "mapLiteral", "valuePair", 
			"numberSetLiteral", "stringSetLiteral", "nullNotnull", "comparisonOperator", 
			"logicalOperator", "limitClause", "limitClauseAtom", "fullId", "tableName", 
			"uid", "dotted_id", "fullColumnNameList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'ALTER'", "'AND'", "'AS'", "'ASC'", "'BETWEEN'", 
			"'BY'", "'COLUMN'", "'CONDITION'", "'CONSTRAINT'", "'CONTINUE'", "'CREATE'", 
			"'CURSOR'", "'DATABASE'", "'DATABASES'", "'DEFAULT'", "'DELETE'", "'DESC'", 
			"'DESCRIBE'", "'DISTINCT'", "'DISTINCTROW'", "'DROP'", "'EXISTS'", "'FROM'", 
			"'IN'", "'INDEX'", "'INSERT'", "'INTO'", "'IS'", "'LIKE'", "'LIMIT'", 
			"'NOT'", "'NULL'", "'NUMBER'", "'ON'", "'OR'", "'ORDER'", "'PARTITION'", 
			"'PRIMARY'", "'PURGE'", "'SELECT'", "'SET'", "'REMOVE'", "'RETURNING'", 
			"'SEPARATOR'", "'SHOW'", "'STATEMENT'", "'TABLE'", "'UNION'", "'UPDATE'", 
			"'VALUES'", "'VALUE'", "'WHERE'", "'TRUE'", "'FALSE'", "'MISSING'", "'INT'", 
			"'INTEGER'", "'BIGINT'", "'REAL'", "'DOUBLE'", "'FLOAT'", "'DECIMAL'", 
			"'NUMERIC'", "'DATE'", "'TIME'", "'TIMESTAMP'", "'DATETIME'", "'YEAR'", 
			"'CHAR'", "'VARCHAR'", "'BEGIN'", "'CONTAINS'", null, "'QUARTER'", "'MONTH'", 
			"'DAY'", "'HOUR'", "'MINUTE'", "'WEEK'", "'SECOND'", "'MICROSECOND'", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'DIV'", "'MOD'", "'='", "'>'", "'<'", 
			"'!'", "'~'", "'|'", "'&'", "'^'", "'['", "']'", "'.'", "'('", "')'", 
			"'{'", "'}'", "','", "';'", "'@'", "'0'", "'1'", "'2'", "'''", "'\"'", 
			"'`'", "':'", "'?'", "'<<'", "'>>'", "'ALL OLD'", "'MODIFIED OLD'", "'ALL NEW'", 
			"'MODIFIED NEW'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SPACE", "COMMENT_INPUT", "LINE_COMMENT", "ALTER", "AND", "AS", 
			"ASC", "BETWEEN", "BY", "COLUMN", "CONDITION", "CONSTRAINT", "CONTINUE", 
			"CREATE", "CURSOR", "DATABASE", "DATABASES", "DEFAULT", "DELETE", "DESC", 
			"DESCRIBE", "DISTINCT", "DISTINCTROW", "DROP", "EXISTS", "FROM", "IN", 
			"INDEX", "INSERT", "INTO", "IS", "LIKE", "LIMIT", "NOT", "NULL_LITERAL", 
			"NUMBER", "ON", "OR", "ORDER", "PARTITION", "PRIMARY", "PURGE", "SELECT", 
			"SET", "REMOVE", "RETURNING", "SEPARATOR", "SHOW", "STATEMENT", "TABLE", 
			"UNION", "UPDATE", "VALUES", "VALUE", "WHERE", "TRUE", "FALSE", "MISSING", 
			"INT", "INTEGER", "BIGINT", "REAL", "DOUBLE", "FLOAT", "DECIMAL", "NUMERIC", 
			"DATE", "TIME", "TIMESTAMP", "DATETIME", "YEAR", "CHAR", "VARCHAR", "BEGIN", 
			"CONTAINS", "COMPRESSION", "QUARTER", "MONTH", "DAY", "HOUR", "MINUTE", 
			"WEEK", "SECOND", "MICROSECOND", "STAR", "DIVIDE", "MODULE", "PLUS", 
			"MINUS", "DIV", "MOD", "EQUAL_SYMBOL", "GREATER_SYMBOL", "LESS_SYMBOL", 
			"EXCLAMATION_SYMBOL", "BIT_NOT_OP", "BIT_OR_OP", "BIT_AND_OP", "BIT_XOR_OP", 
			"BRACKET_LEFT", "BRACKET_RIGHT", "DOT", "LR_BRACKET", "RR_BRACKET", "LR_BRACE", 
			"RR_BRACE", "COMMA", "SEMI", "AT_SIGN", "ZERO_DECIMAL", "ONE_DECIMAL", 
			"TWO_DECIMAL", "SINGLE_QUOTE_SYMB", "DOUBLE_QUOTE_SYMB", "REVERSE_QUOTE_SYMB", 
			"COLON_SYMB", "QUESTION_MARK_SYMB", "ANGLE_DOUBLE_LEFT", "ANGLE_DOUBLE_RIGHT", 
			"RETURNING_ALL_OLD", "RETURNING_MODIFIED_OLD", "RETURNING_ALL_NEW", "RETURNING_MODIFIED_NEW", 
			"RETURN_VALUES", "STRING_LITERAL", "DECIMAL_LITERAL", "REAL_LITERAL", 
			"BIT_STRING", "ID", "SINGLE_QUOTE_ID", "DOUBLE_QUOTE_ID", "ERROR_RECONGNIGION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DynamoSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DynamoSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DynamoSqlParser.EOF, 0); }
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public List<TerminalNode> MINUS() { return getTokens(DynamoSqlParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(DynamoSqlParser.MINUS, i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4512396257787904L) != 0) || _la==SEMI) {
				{
				setState(86);
				sqlStatements();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUS) {
				{
				setState(89);
				match(MINUS);
				setState(90);
				match(MINUS);
				}
			}

			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<EmptyStatement_Context> emptyStatement_() {
			return getRuleContexts(EmptyStatement_Context.class);
		}
		public EmptyStatement_Context emptyStatement_(int i) {
			return getRuleContext(EmptyStatement_Context.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(DynamoSqlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(DynamoSqlParser.SEMI, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(DynamoSqlParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(DynamoSqlParser.MINUS, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(104);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DELETE:
					case INSERT:
					case SELECT:
					case UPDATE:
						{
						setState(95);
						sqlStatement();
						setState(98);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==MINUS) {
							{
							setState(96);
							match(MINUS);
							setState(97);
							match(MINUS);
							}
						}

						setState(101);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
						case 1:
							{
							setState(100);
							match(SEMI);
							}
							break;
						}
						}
						break;
					case SEMI:
						{
						setState(103);
						emptyStatement_();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DELETE:
			case INSERT:
			case SELECT:
			case UPDATE:
				{
				setState(109);
				sqlStatement();
				setState(115);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==MINUS) {
						{
						setState(110);
						match(MINUS);
						setState(111);
						match(MINUS);
						}
					}

					setState(114);
					match(SEMI);
					}
					break;
				}
				}
				break;
			case SEMI:
				{
				setState(117);
				emptyStatement_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SqlStatementContext extends ParserRuleContext {
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			dmlStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EmptyStatement_Context extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(DynamoSqlParser.SEMI, 0); }
		public EmptyStatement_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyStatement_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterEmptyStatement_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitEmptyStatement_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitEmptyStatement_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmptyStatement_Context emptyStatement_() throws RecognitionException {
		EmptyStatement_Context _localctx = new EmptyStatement_Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_emptyStatement_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DmlStatementContext extends ParserRuleContext {
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public UpdateStatementContext updateStatement() {
			return getRuleContext(UpdateStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public DmlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterDmlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitDmlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitDmlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DmlStatementContext dmlStatement() throws RecognitionException {
		DmlStatementContext _localctx = new DmlStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dmlStatement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				selectStatement();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				insertStatement();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				updateStatement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 4);
				{
				setState(127);
				deleteStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectStatementContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(DynamoSqlParser.SELECT, 0); }
		public SelectElementsContext selectElements() {
			return getRuleContext(SelectElementsContext.class,0);
		}
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public LimitClauseContext limitClause() {
			return getRuleContext(LimitClauseContext.class,0);
		}
		public SelectStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterSelectStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitSelectStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitSelectStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStatementContext selectStatement() throws RecognitionException {
		SelectStatementContext _localctx = new SelectStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(SELECT);
			setState(131);
			selectElements();
			setState(132);
			fromClause();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(133);
				limitClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectElementsContext extends ParserRuleContext {
		public Token star;
		public List<SelectElementContext> selectElement() {
			return getRuleContexts(SelectElementContext.class);
		}
		public SelectElementContext selectElement(int i) {
			return getRuleContext(SelectElementContext.class,i);
		}
		public TerminalNode STAR() { return getToken(DynamoSqlParser.STAR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(DynamoSqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DynamoSqlParser.COMMA, i);
		}
		public SelectElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).enterSelectElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoSqlParserListener ) ((DynamoSqlParserListener)listener).exitSelectElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DynamoSqlParserVisitor ) return ((DynamoSqlParserVisitor<? extends T>)visitor).visitSelectElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectElementsContext selectElements() throws RecognitionException {
		SelectElementsContext _localctx = new SelectElementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectElements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STAR:
				{
				setState(136);
				((SelectElementsContext)_localctx).star = match(STAR);
				}
				break;
			case ID:
			case SINGLE_QUOTE_ID:
			case DOUBLE_QUOTE_ID:
				{
				setState(137);
				selectElement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(140);
				match(COMMA);
				setState(141);
				selectElement();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
